# web_server_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark_runner.cpp  boost_server.hpp  crow_server.hpp  custom_server.hpp  httplib_server.hpp  utils.hpp
examples/: CMakeLists.txt
examples/olivec/: CMakeLists.txt  package.json:Zone.Identifier
examples/olivec/public/: index.html  style.css
examples/paint/: CMakeLists.txt  olivec.cpp  paint.cpp
examples/paint/public/: app.js
examples/simple_web_server/: CMakeLists.txt  main.cpp  test.html
examples/simple_web_server/assets/: index.html  styles.css  test.html
include/: HttpRequest.hpp  HttpRequestReader.hpp  HttpResponse.hpp  WebServer.hpp  encryption.hpp  network_socket_communication.hpp  sha1.hpp
include/server/: HttpResponse.hpp  SocketListener.hpp  Threadpool.hpp  WSApplication.hpp  WebServer.hpp  WebSocket.hpp  WebSocketParser.hpp  encryption.hpp
src/: HttpRequest.cpp  HttpRequestReader.cpp  HttpResponse.cpp  SocketListener.cpp  Threadpool.cpp  WSApplication.cpp  WebServer.cpp  WebSocket.cpp  WebSocketParser.cpp
tests/: CMakeLists.txt  SocketListenerTests.cpp  benchmark_tests.cpp  main.cpp  unit_tests.cpp  web_server_integration_tests.cpp  web_server_parser_tests.cpp  web_server_unit_tests.cpp
